# gppy-gpu

./: .gitignore  .gitignore.swp  7DT_Routine.py  7DT_Routine_1x1_gain2750.py  7DT_Routine_1x1_gain2750_TEST.py  7DT_Routine_NxN_gain2750.240426.py  7DT_Routine_NxN_gain2750.unused.py  7DT_Routine_bkg_231225.py  7DT_Routine_data_reduction_only.py  7DT_Routine_master_frame_only.py  7DT_Routine_proton.py  LICENSE  README.md  clean_gpu_memory.py  conf.py  correct_astrometry.py  daily_data_summary.py  gppy_tmux.sh  gppy_tmux_gain0.sh  gpu_status.txt  gpwatch_7DT.py  image_combine_NGC6514_n_sigma.py  image_combine_NGC7496_n_sigma.py  image_combine_UDS_n_sigma.py  index.rst  missfits.xml  outcfg  pyproject.toml  reprocess.py  requirements.txt  run.py  scamp.xml  stack_image_routine.py  stack_image_routine_tile_only.py  stack_images.py  stack_images_mod.py  stack_images_mod_COSMOS.py  stack_images_mod_NGC6121_shift.py  stack_images_mod_PSZ2G227.44-31.24.py  stack_images_mod_T11548.py  (+2 more)
_/: _astrometry_tmp.py  _photometry.py  _utils.py
_config_unused/: 7dt01.ahead
_legacy/: generate_summary_files.py  stack_images_mod_SDSSJ0228-0901.py
_test/: Subtract_Processed_Images.ipynb
config/: .7dt.scamp.swp  7dt.bkgsub.swarp  7dt.missfits  7dt.scamp  7dt.scamp.bkg  7dt.swarp  7dt.swarp.240220.bkg  7dt.swarp.bkg  7dt_2x2.swarp  gphot.config  gregorydet.param  gregoryphot.param  gregoryphot.sex  gregoryphot_2x2.sex  object_to_skip_stacking.txt  simple.param  simple_2x2.sex
config_unused/: default.sex  gregorydet.sex  obs.dat.bkg
docker_image/: Dockerfile
gppy/: __init__.py  data.py  (+13 more)
(+200 files in other folders)
